--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
   --font-family-secondary: "Inter", sans-serif;
 }
 
-.body-team-page .nav-item::after, .body-team-page .nav-item, .confidentiality__link a,
+.body-team-page .teams-card, .body-team-page .nav-item::after, .body-team-page .nav-item, .confidentiality__link a,
 .cookies__policy a, .footer-additionally__link, .footer-social__img svg, .footer-nav__item, .accordion-tab__short::after, .accordion-tab__short, .submit-btn__blue, .submit-block__link a, .input-aria textarea::placeholder, .input-aria textarea, .labeled-input-container input::placeholder, .labeled-input-container input, .contact-info__img svg, .portfolio-btns__blue, .portfolio-btns__contour, .portfolio-card__img img, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
   transition: all 300ms ease;
 }
@@ -37,7 +37,7 @@ body {
   text-transform: uppercase;
 }
 
-.faq__title, .conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
+.body-team-page .teams__title, .faq__title, .conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
   font-size: 54px;
   font-weight: 700;
   line-height: 60px;
@@ -51,13 +51,13 @@ body {
   font-weight: 500;
 }
 
-.footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
+.body-team-page .teams-card__job, .footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
   font-size: 16px;
   font-weight: 325;
   line-height: 22px;
 }
 
-.slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
+.body-team-page .teams-card__name, .slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
@@ -81,7 +81,7 @@ body {
     font-weight: 700;
     line-height: normal;
   }
-  .faq__title, .conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
+  .body-team-page .teams__title, .faq__title, .conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
     font-size: 30px;
     line-height: 32px;
   }
@@ -90,12 +90,12 @@ body {
     font-weight: 325;
     line-height: 24px;
   }
-  .footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
+  .body-team-page .teams-card__job, .footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
     font-size: 12px;
     font-weight: 400;
     line-height: 16px;
   }
-  .slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
+  .body-team-page .teams-card__name, .slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
     font-size: 12px;
     font-weight: 500;
     line-height: 14px;
@@ -272,7 +272,7 @@ nav {
   cursor: pointer;
 }
 
-.body-team-page .nav-item::after, .body-team-page .nav-item, .confidentiality__link a,
+.body-team-page .teams-card, .body-team-page .nav-item::after, .body-team-page .nav-item, .confidentiality__link a,
 .cookies__policy a, .footer-additionally__link, .footer-social__img svg, .footer-nav__item, .accordion-tab__short::after, .accordion-tab__short, .submit-btn__blue, .submit-block__link a, .input-aria textarea::placeholder, .input-aria textarea, .labeled-input-container input::placeholder, .labeled-input-container input, .contact-info__img svg, .portfolio-btns__blue, .portfolio-btns__contour, .portfolio-card__img img, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
   transition: all 300ms ease;
 }
@@ -490,7 +490,7 @@ h1 {
   aspect-ratio: auto 947/640;
 }
 
-.faq__title, .conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
+.body-team-page .teams__title, .faq__title, .conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
   font-size: 54px;
   font-weight: 700;
   line-height: 60px;
@@ -498,7 +498,7 @@ h1 {
 }
 
 @media (max-width: 576px) {
-  .faq__title, .conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
+  .body-team-page .teams__title, .faq__title, .conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
     font-size: 30px;
     line-height: 32px;
   }
@@ -999,13 +999,13 @@ h1 {
   color: var(--gray-20);
 }
 
-.footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
+.body-team-page .teams-card__job, .footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
   font-size: 16px;
   font-weight: 325;
   line-height: 22px;
 }
 
-.slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
+.body-team-page .teams-card__name, .slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
@@ -1024,12 +1024,12 @@ h1 {
 }
 
 @media (max-width: 576px) {
-  .footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
+  .body-team-page .teams-card__job, .footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
     font-size: 12px;
     font-weight: 400;
     line-height: 16px;
   }
-  .slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
+  .body-team-page .teams-card__name, .slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
     font-size: 12px;
     font-weight: 500;
     line-height: 14px;
@@ -1623,6 +1623,79 @@ h1 {
 }
 .body-team-page .hero__text {
   padding-bottom: 0;
+}
+.body-team-page .teams {
+  padding-top: 180px;
+  padding-bottom: 180px;
+}
+.body-team-page .teams-row__one {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.body-team-page .teams-row__description {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.body-team-page .teams__text {
+  color: var(--gray-80);
+  font-size: var(--font-size-secondary);
+  line-height: var(--line-height-secondary);
+}
+.body-team-page .teams__gallary {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+  flex-wrap: wrap;
+  flex: 1 1;
+}
+.body-team-page .teams-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+}
+.body-team-page .teams-card__img {
+  position: relative;
+}
+.body-team-page .teams-card__img::after {
+  position: absolute;
+  content: url(../img/bx_bxl-linkedin.svg);
+  right: 0;
+  top: 0;
+  width: 32px;
+  height: 32px;
+  transform: translate(-24px, 24px);
+}
+.body-team-page .teams-card__img img {
+  width: 100%;
+  height: auto;
+  aspect-ratio: auto 330/330;
+}
+.body-team-page .teams-card__name {
+  color: var(--blue-100);
+}
+.body-team-page .teams-card__job {
+  color: var(--gray-80);
+}
+.body-team-page .teams-card:hover {
+  transform: scale(105%);
+}
+.body-team-page .teams-row__second {
+  padding-top: 78px;
+}
+.body-team-page .teams-row__third {
+  padding-top: 78px;
+}
+.body-team-page .teams-row__third .teams__gallary {
+  justify-content: flex-start;
+  gap: 40px;
 }
 
 /*# sourceMappingURL=styles.css.map */
