--- a/scss/_team-page.scss
+++ b/scss/_team-page.scss
@@ -122,4 +122,99 @@
     .hero__text {
         padding-bottom: 0;
     }
+
+    .teams {
+        padding-top: 180px;
+        padding-bottom: 180px;
+    }
+
+    .teams-row__one {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        gap: 30px;
+        flex-wrap: wrap;
+    }
+
+    .teams-row__description {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .teams__title {
+        @extend %H1-M;
+    }
+
+    .teams__text {
+        color: var(--gray-80);
+        font-size: var(--font-size-secondary);
+        line-height: var(--line-height-secondary);
+    }
+
+    .teams__gallary {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 20px;
+        flex-wrap: wrap;
+        flex: 1 1;
+    }
+
+    .teams-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 4px;
+        @extend %transition;
+
+        &__img {
+            position: relative;
+        }
+
+        &__img::after {
+            position: absolute;
+            content: url(../img/bx_bxl-linkedin.svg);
+            right: 0;
+            top: 0;
+            width: 32px;
+            height: 32px;
+            transform: translate(-24px, 24px);
+        }
+
+        &__img img {
+            width: 100%;
+            height: auto;
+            aspect-ratio: auto 330/330;
+        }
+
+        &__name {
+            @extend %H6;
+            color: var(--blue-100);
+        }
+
+        &__job {
+            @extend %TXT-S;
+            color: var(--gray-80);
+        }
+    }
+
+    .teams-card:hover {
+        transform: scale(105%);
+    }
+
+    .teams-row__second {
+        padding-top: 78px;
+    }
+
+    .teams-row__third {
+        padding-top: 78px;
+
+        .teams__gallary {
+            justify-content: flex-start;
+            gap: 40px;
+        }
+    }
 }
